Add --version CLI option
Implements --version flag that displays the installed version of pixi-devenv.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,4 +40,4 @@ jobs:
       shell: bash
       run: |
         uv build
-        uvx --with `find dist/*.whl` pixi-devenv --help
+        uvx --with `find dist/*.whl` pixi-devenv --version
